--- a/roles/appcenter-agent/tasks/main.yml
+++ b/roles/appcenter-agent/tasks/main.yml
@@ -3,8 +3,19 @@ name: Setup AppCenter Agent
   become: yes
   become_user: root
   get_url:
-    url: '{{etcd_tgz_url}}'
-    dest: /tmp/{{etcd_tgz}}
-    checksum: '{{etcd_checksum}}'
-    timeout: '{{etcd_download_timeout_seconds}}'
+    url: 'http://appcenter-docs.qingcloud.com/developer-guide/scripts/app-agent-linux-amd64.tar.gz'
+    dest: /tmp/app-agent-linux-amd64.tar.gz
     mode: 0644
+
+name: Extract Agent package
+  become: yes
+  become_user: root
+  unarchive:
+    remote_src: yes
+    src: /tmp/app-agent-linux-amd64.tar.gz
+    dest: /tmp/
+
+name: Install Agent package
+  become: yes
+  become_user: root
+  script: /tmp/app-agent-linux-amd64/install.sh
