provider lifecycle script

--- a/roles/etcd-service/files/services/etcd-grpc-proxy.service
+++ b/roles/etcd-service/files/services/etcd-grpc-proxy.service
@@ -10,7 +10,7 @@ WorkingDirectory=/var/lib/etcd/
 EnvironmentFile=-/etc/etcd/etcd.conf
 User=etcd
 # set GOMAXPROCS to number of processors
-ExecStart=/bin/bash -c "GOMAXPROCS=$(nproc) /usr/local/bin/etcd grpc-proxy start --listen-client-urls=\"${ETCD_LISTEN_CLIENT_URLS}\""
+ExecStart=/bin/bash -c "ETCD_NAME=etcd-proxy$UNIQUESID GOMAXPROCS=$(nproc) /usr/local/bin/etcd grpc-proxy start --listen-client-urls=\"${ETCD_LISTEN_CLIENT_URLS}\""
 Restart=on-failure
 LimitNOFILE=65536
 
