--- a/roles/etcd-service/tasks/main.yml
+++ b/roles/etcd-service/tasks/main.yml
@@ -37,8 +37,8 @@
   become_user: root
   with_items:
     - leave.sh
-    - start.sh
-    - stop.sh
+    - run.sh
+    - join.sh
     - compact.sh
   copy:
     src: files/script/{{item}}
