--- a/roles/appcenter-agent/tasks/main.yml
+++ b/roles/appcenter-agent/tasks/main.yml
@@ -6,6 +6,8 @@
     url: 'http://appcenter-docs.qingcloud.com/developer-guide/scripts/app-agent-linux-amd64.tar.gz'
     dest: /tmp/app-agent-linux-amd64.tar.gz
     mode: 0644
+    checksum: 'sha256:a44881167f7ef67edf92ed0124d778c24463e6bee7d91b77e3b85f1f6802c449'
+
 
 - name: Extract Agent package
   become: yes
@@ -18,6 +20,6 @@
 - name: Install Agent package
   become: yes
   become_user: root
-  command: sh /tmp/app-agent-linux-amd64/install.sh
+  shell: sh install.sh
   args:
     chdir: /tmp/app-agent-linux-amd64/
