--- a/roles/etcd-service/files/services/etcd.service
+++ b/roles/etcd-service/files/services/etcd.service
@@ -3,6 +3,8 @@ Description=Etcd Server
 After=network.target
 After=network-online.target
 Wants=network-online.target
+After=etcd-status-guard.service
+Wants=etcd-status-guard.service
 
 [Service]
 Type=notify
@@ -11,12 +13,11 @@ EnvironmentFile=-/etc/etcd/etcd.conf
 EnvironmentFile=-/etc/etcd/runtime_etcd.conf
 User=root
 # set GOMAXPROCS to number of processors
-ExecStartPre=/usr/local/bin/join.sh
 ExecStart=/bin/bash -c "ETCD_NAME=etcd$UNIQUESID /usr/local/bin/etcd"
 ExecStartPost=/usr/local/bin/post_run.sh
-Restart=on-failure
 LimitNOFILE=65536
 NotifyAccess=all
+TimeoutStartSec=0
 
 [Install]
 WantedBy=multi-user.target
