--- a/ansible/make.yml
+++ b/ansible/make.yml
@@ -39,10 +39,15 @@
         comment: "etcd Service User"
         state: present
 
-    - name: Copy confd toml files
+    - name: Copy confd make.toml files
       copy:
         src: files/etc/confd/conf.d/make.sh.toml
         dest: /etc/confd/conf.d/make.sh.toml
+
+    - name: Copy confd nodeexporter.toml files
+      copy:
+       src: files/etc/confd/conf.d/nodeexporter.sh.toml
+       dest: /etc/confd/conf.d/nodeexporter.sh.toml
 
     - name: Compile tmpl files
       raw: |
@@ -51,7 +56,7 @@
         rm -rf $destDir
         mkdir -p $destDir/conf.d $destDir/templates
         tmplFile=$destDir/templates/make.sh.tmpl
-        for tmpl in $(ls $srcDir/templates/*); do
+        for tmpl in $(ls $srcDir/templates/01.header.sh.tmpl $srcDir/templates/02.app.env.tmpl); do
           cat $tmpl >> $tmplFile
           echo >> $tmplFile
         done
@@ -62,6 +67,11 @@
       copy:
         src: files/tmp/confd/templates/make.sh.tmpl
         dest: /etc/confd/templates/make.sh.tmpl
+
+    - name: Copy confd nodeexporter.tmpl files
+      copy:
+       src: files/etc/confd/templates/nodeexporter.sh.tmpl
+       dest: /etc/confd/templates/nodeexporter.sh.tmpl
 
     - name: Prepare directories
       file:
