--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -7,3 +7,5 @@
 - src: https://qingcloudappcenter.github.io/ansible-roles/install-1.0.5.tar.gz
 - src: https://qingcloudappcenter.github.io/ansible-roles/caddy-1.1.7.tar.gz
 - src: https://qingcloudappcenter.github.io/ansible-roles/create-service-user-1.0.0.tar.gz
+- src: https://qingcloudappcenter.github.io/ansible-roles/node-exporter-1.0.0.tar.gz
+
