--- a/ansible/files/etc/confd/conf.d/etcdrootauth.sh.toml
+++ b/ansible/files/etc/confd/conf.d/etcdrootauth.sh.toml
@@ -3,6 +3,6 @@ src = "etcdrootauth.sh.tmpl"
 dest = "/opt/app/bin/etcdrootauth.sh"
 mode = "0700"
 keys = [
-  "/env/etcdrootauth",
+  "/",
 ]
-reload_cmd = "/opt/app/bin/etcdutils.sh updateEtcdrootauth"
+reload_cmd = "/opt/app/bin/ctl.sh updateEtcdRootAuthCtl"
